--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Video Info</title>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Video Converter"/>
+    <meta name="keywords" content="HTML,CSS,JavaScript,Electron" />
+    <meta name="author" content="Adépòjù Olúwáségun" />
+    <!-- Title -->
+    <meta name="theme-color" content="#000000"/>
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+    name="description"
+    content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
