fix() fix UI scroll

--- a/ui/index.html
+++ b/ui/index.html
@@ -16,13 +16,14 @@
   </head>
 
   <!-- Body Section -->
-
   <body>
     <div class="top"></div>
     <div class="content">
       <h1 class="title">MirranVids</h1>
-      <input type="file" accept="video/*" />
+      <input  type="file" accept="video/*" />
+      <button id="file" class="file" >sdfghjk</button>
     </div>
-    <footer class="footer"></footer>
+    <div class="footer"></div>
+    <script type="text.javascript" src="./js/home.js"></script>
   </body>
 </html>
