feature(client/electrion communicatoin): implement ipc renderer

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Adépòjù Olúwáségun" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Title -->
-    <title>as</title>
+    <title>Video Info</title>
     <!-- Favicon -->
     <link rel="icon" href="assets/fav.ico" sizes="16x16" />
     <!-- styles -->
@@ -19,11 +19,11 @@
   <body>
     <div class="top"></div>
     <div class="content">
-      <h1 class="title">MirranVids</h1>
-      <input  type="file" accept="video/*" />
-      <button id="file" class="file" >sdfghjk</button>
+      <h1 class="title">........</h1>
+      <input class="file" type="file" accept="video/*" />
+      <span id="display"></span>
     </div>
     <div class="footer"></div>
-    <script type="text.javascript" src="./js/home.js"></script>
+    <script type="text/javascript" src="../dist/ui/js/home.js"></script>
   </body>
-</html>
+    </html>
