ft(communication): implement electron/client communication

--- a/ui/index.html
+++ b/ui/index.html
@@ -19,9 +19,10 @@
   <body>
     <div class="top"></div>
     <div class="content">
-      <h1 class="title">........</h1>
+      <h1 class="title">VidInfo</h1>
       <input class="file" type="file" accept="video/*" />
-      <span id="display"></span>
+      <button id="info">Get Info</button>
+      <h1 id="display"></h1>
     </div>
     <div class="footer"></div>
     <script type="text/javascript" src="../dist/ui/js/home.js"></script>
