cleanup menu templates

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,9 @@
   <head>
     <title>Github-gif-optimizer</title>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Video Converter"/>
-    <meta name="keywords" content="HTML,CSS,JavaScript,Electron" />
+    <meta name="keywords" content="HTML,CSS,JavaScript,React,Electron" />
     <meta name="author" content="Adépòjù Olúwáségun" />
     <!-- Title -->
     <meta name="theme-color" content="#000000"/>
